--- a/css/style1.css
+++ b/css/style1.css
@@ -1,49 +1,51 @@
 /* BEGIN css/colorscheme.css */
 :root {
-        /* gruvbox dark */
-        --dark-ansi00: #d7d7d7; /* Inverted color */
-        --dark-ansi00-hard: #e2dfde; /* Inverted color */
-        --dark-ansi00-soft: #cdcfd0; /* Inverted color */
-        --dark-ansi01: #33dbdc; /* Inverted color */
-        --dark-ansi02: #676e85; /* Inverted color */
-        --dark-ansi03: #2866ac; /* Inverted color */
-        --dark-ansi04: #ba7aaf; /* Inverted color */
-        --dark-ansi05: #4e9a6d; /* Inverted color */
-        --dark-ansi06: #975846; /* Inverted color */
-        --dark-ansi07: #567571; /* Inverted color */
-        --dark-ansi08: #6d7c87; /* Inverted color */
-        --dark-ansi09: #04b3d3; /* Inverted color */
-        --dark-ansi10: #47449c; /* Inverted color */
-        --dark-ansi11: #0548f2; /* Inverted color */
-        --dark-ansi12: #7c59c7; /* Inverted color */
-        --dark-ansi13: #387777; /* Inverted color */
-        --dark-ansi14: #713f83; /* Inverted color */
-        --dark-ansi15: #141424; /* Inverted color */
-      
-        /* gruvbox light */
-        --light-ansi-00: #040e18; /* Inverted color */
-        --light-ansi-00-hard: #060a14; /* Inverted color */
-        --light-ansi-00-soft: #0d1a25; /* Inverted color */
-        --light-ansi-01: #33dbdc; /* Inverted color */
-        --light-ansi-02: #676e85; /* Inverted color */
-        --light-ansi-03: #2866ac; /* Inverted color */
-        --light-ansi-04: #ba7aaf; /* Inverted color */
-        --light-ansi-05: #4e9a6d; /* Inverted color */
-        --light-ansi-06: #975846; /* Inverted color */
-        --light-ansi-07: #8b989d; /* Inverted color */
-        --light-ansi-08: #6d7c87; /* Inverted color */
-        --light-ansi-09: #f262f9; /* Inverted color */
-        --light-ansi-10: #868b4d; /* Inverted color */
-        --light-ansi-11: #4a839c; /* Inverted color */
-        --light-ansi-12: #f89187; /* Inverted color */
-        --light-ansi-13: #7070b0; /* Inverted color */
-        --light-ansi-14: #b884a7; /* Inverted color */
-        --light-ansi-15: #c3c0be; /* Inverted color */
-    }
+	/* gruvbox dark */
+	--dark-ansi00: #282828;
+	--dark-ansi00-hard: #1d2021;
+	--dark-ansi00-soft: #32302f;
+	--dark-ansi01: #cc241d;
+	--dark-ansi02: #98971a;
+	--dark-ansi03: #d79921;
+	--dark-ansi04: #458588;
+	--dark-ansi05: #b16286;
+	--dark-ansi06: #689d6a;
+	--dark-ansi07: #a89984;
+	--dark-ansi08: #928374;
+	--dark-ansi09: #fb4934;
+	--dark-ansi10: #b8bb26;
+	--dark-ansi11: #fabd2f;
+	--dark-ansi12: #83a598;
+	--dark-ansi13: #c78888;
+	--dark-ansi14: #8ec07c;
+	--dark-ansi15: #ebdbb2;
+
+	/* gruvbox light */
+	--light-ansi-00: #fbf1c7;
+	--light-ansi-00-hard: #f9f5d7;
+	--light-ansi-00-soft: #f2e5bc;
+	--light-ansi-01: #cc241d;
+	--light-ansi-02: #98971a;
+	--light-ansi-03: #d79921;
+	--light-ansi-04: #458588;
+	--light-ansi-05: #b16286;
+	--light-ansi-06: #689d6a;
+	--light-ansi-07: #7c6f64;
+	--light-ansi-08: #928374;
+	--light-ansi-09: #9d0006;
+	--light-ansi-10: #79740e;
+	--light-ansi-11: #b57614;
+	--light-ansi-12: #076678;
+	--light-ansi-13: #8f3f71;
+	--light-ansi-14: #427b58;
+	--light-ansi-15: #3c3836;
+}
 
 /* END css/colorscheme.css */
 
 /* elements */
+
+
 a {
 	color: var(--dark-ansi13);
 	outline-color: invert;
@@ -59,13 +61,15 @@ abbr {
 
 body,
 html {
-	background-color: var(--dark-ansi00-hard);
+	background-color: var(--light-ansi00-hard);
 	color: var(--dark-ansi15);
 	margin: 0;
+	font-family: DejaVu Serif;
+	font-size: 14px;
 }
 
 body {
-	padding: 0 0.5em;
+	padding: 0.5em;
 }
 
 blockquote {
@@ -123,12 +127,12 @@ section {
 
 article,
 section {
-	max-width: 60%;
+	max-width: 65%;
 }
 
 section,
 .indexlist {
-	line-height: 1.5;
+	line-height: 1.2;
 }
 
 intro {
@@ -241,6 +245,8 @@ img.thumb_inline {
 	float: left;
 	/*	margin: 1em; */
 	margin-right: 2em;
+	z-index: -1;
+	zoom: 0.8;
 }
 
 /* Images/Figures */
@@ -261,12 +267,12 @@ figure img {
 	object-fit: scale-down;
 }
 
-nav,
+/* nav,
 themes,
 footer {
 	background-color: var(--dark-ansi00);
 	color: var(--dark-ansi07);
-}
+} */
 
 header {
 	color: var(--dark-ansi06);
@@ -311,7 +317,7 @@ header {
 
 nav {
 	font-size: large;
-	max-width: 16%;
+	max-width: 26%;
 	font-weight: bold;
 	margin: 0.5rem 2rem 2rem 2rem;
 	padding: 0 1rem 0 1rem;
@@ -355,6 +361,12 @@ iframe[seamless] {
 }
 
 
+
+summary {
+	cursor: pointer; /* Add a pointer cursor to indicate it's clickable */
+	outline: none; /* Remove the default focus outline */
+}
+
 themes {
 	float: right;
 	margin: 0.5rem;
@@ -393,26 +405,28 @@ in a {
 }
 
 
-
 /* Media query for smaller screens */
 @media (max-width: 768px) {
 
-	body,
-	html {
+	body{
 		background-color: var(--dark-ansi00-hard);
 		color: var(--dark-ansi15);
-		margin: 0;
+		margin: 58% 0;
 		padding: 0;
+		max-width: 100%;
 	}
 
 	nav {
 		float: none;
+		font-size: larger;
 		/* Remove the float property */
-		max-width: 80%;
+		max-width: 93%;
 		/* Allow the nav to take up the full width */
 		width: 100%;
 		margin: 0.5rem auto;
 		/* Center the nav and adjust margins */
+		zoom: 1.2;
+		border-radius: 0.9rem;: #076678em;
 	}
 
 	nav3 {
@@ -425,7 +439,42 @@ in a {
 		max-width: 95%;
 		/* Allow articles and sections to take up full width */
 		width: 95%;
-		margin: 0 auto 0 auto;
+		margin: 1rem auto 0 auto;
+		padding-top: 10%;
 	}
+
+	nav {
+		display: flex;
+		flex-direction: column;
+		border-bottom: 1px solid #ccc;
+	}
+
+	/* Style the details element */
+	details {
+		max-height: 22vh; /* Set the maximum height to 10% of the viewport height */
+		overflow: auto; /* Add scrollbars if content exceeds max height */
+		border-bottom: 5px solid #000000;
+	}
+
+	/* Style the scrollbar for the details element */
+details::-webkit-scrollbar {
+    width: 5px; /* Set the width of the scrollbar */
 }
 
+/* Style the scrollbar track */
+details::-webkit-scrollbar-track {
+    background-color: #f1f1f1; /* Set the background color of the track */
+}
+
+/* Style the scrollbar thumb */
+details::-webkit-scrollbar-thumb {
+    background-color: #888; /* Set the color of the thumb */
+    border-radius: 5px; /* Add rounded corners to the thumb */
+}
+
+/* Style the scrollbar thumb on hover */
+details::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* Change the color of the thumb on hover */
+}
+
+}
