--- a/dark/css/theme.css
+++ b/dark/css/theme.css
@@ -1,8 +1,4 @@
-
-
-
-
-:root { 
+/*:root { 
 	background-color: #fefefe;
 	filter: invert(100%) contrast(1.3) saturate(0.9) hue-rotate(180deg);
  }
@@ -10,16 +6,7 @@
  * { 
 	background-color: inherit;
  }
-
- .invertible {
-    filter: invert(1) contrast(1) saturate(1) hue-rotate(180deg);
-}
-
  
-
-
- 
-
 /* img:not([src*=".svg"]), video {  
 	filter: invert(100%);
  }*/
