--- a/d/css/theme.css
+++ b/d/css/theme.css
@@ -1,12 +1,12 @@
-:root { 
+/*:root { 
 	background-color: #fefefe;
-	filter: invert(100%) contrast(0.95) saturate(0.9) hue-rotate(180deg);
+	filter: invert(100%) contrast(1.3) saturate(0.9) hue-rotate(180deg);
  }
  
  * { 
 	background-color: inherit;
  }
  
- img:not([src*=".svg"]), video {  
+/* img:not([src*=".svg"]), video {  
 	filter: invert(100%);
- }
+ }*/
