--- a/d/css/style1.css
+++ b/d/css/style1.css
@@ -82,6 +82,7 @@ pre {
 	background-color: var(--dark-ansi00);
 	color: var(--dark-ansi15);
 	font-family: monospace;
+	font-size: 9px;
 }
 
 code {
